Hopefully actually fix timezone stuff this time

--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
 ZEELSTER_EETLIJST_WACHTWOORD=eetlijstpw
 ZEELSTER_TELEGRAM_SECRET=telegramsecret
 ZEELSTER_TELEGRAM_GROUP=-500109092
+# Timezone for scheduled tasks
+TZ=Europe/Amsterdam
